# mahzen

./: README.md  backend.sh  fix.sh  index.html  package-lock.json  package.json  refactor.sh  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.rs.backup
src-tauri/src/cache/: mod.rs  stats_cache.rs
src-tauri/src/commands/: cache_commands.rs  file_commands.rs  mod.rs  system_commands.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: filesystem.rs  mod.rs  preview.rs  system_info.rs
src-tauri/src/utils/: file_helpers.rs
src/components/activity/: ActivityView.tsx
src/components/common/: ContextMenu.tsx  FileIcon.tsx  NavItem.tsx  WindowControls.tsx
src/components/file-browser/: FileBrowserHeader.tsx  FileGrid.tsx  FileList.tsx
src/components/layout/: MainContent.tsx
src/components/settings/: SettingsView.tsx
src/components/sidebar/: InfoView.tsx  LeftSidebar.tsx  RightSidebar.tsx
src/constants/: fileTypes.ts
src/context/: ThemeContext.tsx
src/hooks/: useIconCache.ts  useNavigation.ts  useResize.ts
src/services/: tauriService.ts
src/types/: index.ts
src/utils/: fileHelpers.ts  formatters.ts
